--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,8 +21,7 @@
         <article class="login-section-info">
           <h1 class="login-section-title">login to vote</h1>
           <p class="login-section-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia,
-            minus!
+            Welcome dear nacossite, please login to select the candidate of your choice
           </p>
         </article>
         <article class="login-section-form">
