--- a/views/admin/partials/footer.ejs
+++ b/views/admin/partials/footer.ejs
@@ -22,6 +22,7 @@
 <script src="/js/tableHTMLExport.js"></script>
 <script src="/js/parsley.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>  
 <script src="/js/axios.js"></script>
 <script src="/js/admin.js"></script>
 <script src="/js/script.min.js"></script>
