--- a/views/admin/partials/footer.ejs
+++ b/views/admin/partials/footer.ejs
@@ -25,7 +25,7 @@
 <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>  
 <script src="/js/axios.js"></script>
 <script src="/js/admin.js"></script>
-<script src="/js/script.min.js"></script>
+<script src="/js/script.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
 <script src="/js/datatables-demo.js"></script>
